refactor: remove unused code and write missing tests