@@ -67,6 +67,8 @@
 						javamm.code/com.revenat.javamm.code.fragment.function=ALL-UNNAMED
 						--add-opens
 						javamm.code/com.revenat.javamm.code.syntax=ALL-UNNAMED
+						--add-opens
+						javamm.code/com.revenat.javamm.code.util=ALL-UNNAMED
 					</argLine>
 				</configuration>
 			</plugin>
